# overlord-rs

./: .env.example  .gitignore  Cargo.toml  README.md  bur.sh
crates/oops-rs/: .gitignore  Cargo.toml  README.md  addresses.txt
crates/oops-rs/src/: main.rs  resolvers.rs  sol_bindings.rs
crates/overlord-shared/: Cargo.toml  README.md
crates/overlord-shared-types/: Cargo.toml
crates/overlord-shared-types/src/: lib.rs
crates/overlord-shared/src/: common.rs  constants.rs  lib.rs  sol_bindings.rs
crates/overlord-shared/src/abis/: AuthorizedForwarder.json  iatoken.json
crates/overlord-shared/src/abis/aggregators/: AccessControlledOCR2Aggregator.json  CLSynchronicityPriceAdapterPegToBase.json  CbETHPriceCapAdapter.json  EBTCPriceCapAdapter.json  OsETHPriceCapAdapter.json  PendlePriceCapAdapter.json  PriceCapAdapterStable.json  RETHPriceCapAdapter.json  WeETHPriceCapAdapter.json  WstETHPriceCapAdapter.json  sDAISynchronicityPriceAdapter.json
crates/profito-rs/: Cargo.toml  README.md
crates/profito-rs/src/: calculations.rs  constants.rs  lib.rs  main.rs  mev_share_service.rs  sol_bindings.rs  utils.rs
crates/profito-rs/src/cache/: mod.rs  price.rs  provider.rs
crates/vega-rs/: .gitignore  Cargo.toml  README.md  asset_to_contract_address_mapping_20241203195156.csv
crates/vega-rs/hf-traces/: README.md
crates/vega-rs/src/: address_cache.rs  calc_utils.rs  fork_provider.rs  lib.rs  main.rs  user_reserve_cache.rs
crates/whistleblower-rs/: .gitignore  Cargo.toml  README.md
crates/whistleblower-rs/src/: main.rs
data/vega/: .gitignore  addresses_20250124_77178.txt  asset_to_contract_address_mapping_20250125153311.csv  asset_to_contract_address_mapping_20250401121734.csv
data/vega/borrowers/: 2023_01_raw.txt  2023_02_raw.txt  2023_03_raw.txt  2023_04_raw.txt  2023_05_raw.txt  2023_06_raw.txt  2023_07_raw.txt  2023_08_raw.txt  2023_09_raw.txt  2023_10_raw.txt  2023_11_raw.txt  2023_12_raw.txt  2024_01_raw.txt  2024_02_raw.txt  2024_03_raw.txt  2024_04_raw.txt  2024_05_raw.txt  2024_06_raw.txt  2024_07_raw.txt  2024_08_raw.txt  2024_09_raw.txt  2024_10_raw.txt  2024_11_raw.txt  2024_12_raw.txt  2025_01_raw.txt  2025_01_raw_partial.txt  2025_02_raw.txt  2025_02_raw_partial.txt  2025_03_raw.txt  2025_03_raw_partial.txt  2025_04_raw.txt  2025_04_raw_partial.txt  2025_05_raw_partial.txt
rsyslog/: overlord-rs.conf
scripts/: .gitignore  requirements.txt  run_pmex.py  shutdown-rs.sh  startup-rs.sh
