[workspace]
resolver = "2"
members = [
    "crates/vega-rs",
    "crates/oops-rs"
]

[workspace.dependencies]
alloy = {version = "0.4.2", features = ["full", "node-bindings"]}
bincode = "1.3.3"
chrono = "0.4.38"
overlord-shared-types = { git = "ssh://git@github.com/hernan-erasmo/overlord-shared-types.git" }
tokio = { version = "1.41.1", features = ["full"]}
zmq = "0.10.0"
