[workspace]
resolver = "2"
members = [
    "crates/vega-rs",
    "crates/oops-rs",
    "crates/whistleblower-rs",
    "crates/overlord-shared",
    "crates/profito-rs"
]

[workspace.dependencies]
alloy = {version = "0.4.2", features = ["full", "node-bindings"]}
alloy-primitives = "0.8.15"
bincode = "1.3.3"
chrono = "0.4.38"
ethers-core = "2.0.14"
futures-util = "0.3.31"
hex = "0.4.3"
mev-share = { git = "https://github.com/paradigmxyz/mev-share-rs", branch = "main" }
once_cell = "1.20.2"
overlord-shared = { path = "crates/overlord-shared" }
serde = "1.0.214"
tokio = { version = "1.41.1", features = ["full"]}
tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["local-time"]}
tracing-appender = "0.2"
zmq = "0.10.0"
