[package]
name = "oops-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy.workspace = true
bincode.workspace = true
chrono.workspace = true
ethers-core.workspace = true
futures-util.workspace = true
tracing = true
tracing-subscriber = true
tracing-appender true
hex.workspace = true
overlord-shared-types.workspace = true
tokio.workspace = true
zmq.workspace = true
