[package]
name = "oops-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy.workspace = true
bincode.workspace = true
chrono.workspace = true
ethers-core.workspace = true
futures-util.workspace = true
lru = "0.14.0"
mev-share-sse = "0.4.0"
once_cell.workspace = true
serde_json.workspace = true
strum = "0.27"
strum_macros = "0.27"
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
hex.workspace = true
overlord-shared.workspace = true
tokio.workspace = true
zmq.workspace = true
