[package]
name = "profito-rs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bpchecker"
path = "bin/bpchecker.rs"

[dependencies]
alloy.workspace = true
bincode.workspace = true
tokio.workspace = true
once_cell = "1.20.2"
overlord-shared-types.workspace = true
serde.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
zmq.workspace = true
