[package]
name = "profito-rs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bpchecker"
path = "bin/bpchecker.rs"

[dependencies]
alloy.workspace = true
bincode.workspace = true
ethers-core.workspace = true
ethers-signers = "2.0.14"
jsonrpsee = "0.20"
mev-share.workspace = true
once_cell = "1.20.2"
overlord-shared.workspace = true
serde.workspace = true
tokio.workspace = true
tower = "0.4"
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
zmq.workspace = true

[lib]
path = "src/lib.rs"
