[package]
name = "vega-rs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "collateral_filtering"
path = "bin/collateral_filtering.rs"

[dependencies]
alloy.workspace = true
bincode.workspace = true
chrono.workspace = true
clap = { version = "4.5.20", features = ["derive"] }
eyre = "0.6.12"
futures.workspace = true
overlord-shared.workspace = true
rand = "0.9.1"
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
uuid = { version = "1.11.0", features = ["v4"]}
zmq.workspace = true
