[package]
name = "whistleblower-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy.workspace = true
alloy-primitives = "0.8.15"
alloy-rpc-types-eth = "0.8.3"
bincode.workspace = true
chrono.workspace = true
ethers-core.workspace = true
futures-util.workspace = true
hex.workspace = true
overlord-shared-types.workspace = true
tokio.workspace = true
tracing = true
tracing-subscriber = true
tracing-appender true
zmq.workspace = true
